--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 body,
 html {
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: 'Questrial', sans-serif;
   font-size: 14px;
   width: 100%;
   height: 100%;
@@ -9,22 +9,26 @@ html {
 }
 
 section{
-  background: url("https://a0.muscache.com/im/pictures/79335a79-379b-444b-8d52-251e89b378b9.jpg?aki_policy=large");
+  background: url("https://i.imgur.com/hmNcmZ1.jpg");
+  margin-top: 60px; //margen superior para la cabecera
   width: 100%;
-  height: 100%;
+  height: 440px;
   background-size: cover;
 }
 
 header{
-  background-image: linear-gradient(to bottom,rgba(0, 0,0,0.5),rgba(0, 0,0,0)) ; 
+  //background-image: linear-gradient(to bottom,rgba(0,0,0,),rgba(0,0,0,0)) ;
+  background: rgba(0, 0, 0, 1);
   width: 100%;
-  position: absolute;
-  left: 0;
+  height: 60px;
+  position: fixed;
   top: 0;
+  z-index: 100; // al hacer scroll, el contenido pasa por debajo del menu
   ul{
     list-style: none;
     position: absolute;
-    right: 0;
+    top: 10px; // 10 px para centrar los items 
+    right: 200px;
     li{
       color: #fff;
       width: auto;
@@ -36,14 +40,16 @@ header{
   }
 }
 
-div{
+div {
+  background-image: linear-gradient(to right,rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ;
   position: absolute;
-  width: 500px;
-  height: 300px;
-  left: 50%;
-  top: 50%;
-  margin-left: -250px;
-  margin-top: -150px;
+  padding-left: 150px;
+  width: 600px;
+  height: 440px;
+  left: 21%;
+  top: 30%;
+  margin-left: -300px;
+  margin-top: -170px;
 }
   input{
     width: 100%;
@@ -53,7 +59,25 @@ div{
     border: none;
   }
   h1{
-    font-size: 35px;
+    font-size: 36px;
+    font-style: bold;
+    color: #fff ;
+    font-weight:0;
+  }
+  
+  h2{
+    padding-top: 30px;
+    font-size: 15px;
+    font-style: bold;
+    color: #f1c40f  ;
+    font-weight:0;
+  }
+  p{
+    font-size: 20px;
+    font-style: bold;
     color: #fff;
-    font-weight: 300;
+    font-weight:300;
+  }
+  img{
+    padding-left: 130px;
   }
